fact: add architecture auto-detection with i18n support
- Implement Architecture enum with 5 architectures (aarch64, arm, x86_64, i686, riscv64)
- Add architecture detection using uname -m
- Add manual architecture selection prompt with i18n translations
- Update i18n files (zh.toml, en.toml) with architecture-related strings
- Integrate Translator with arch module for proper internationalization

--- a/src/i18n/locales/en.toml
+++ b/src/i18n/locales/en.toml
@@ -136,3 +136,16 @@ groups_command_failed = "groups command execution failed"
 whoami_command_failed = "whoami command execution failed"
 failed_execute_whoami = "Failed to execute whoami: {}"
 failed_execute_groups = "Failed to execute groups: {}"
+
+# Architecture detection
+arch_detection_failed = "Architecture detection failed"
+unsupported_arch = "Unsupported architecture"
+arch_detection_prompt = "Cannot auto-detect architecture, please select manually:"
+arch_option_1 = "1. aarch64 (ARM64)"
+arch_option_2 = "2. arm (ARM32)"
+arch_option_3 = "3. x86_64 (64-bit x86)"
+arch_option_4 = "4. i686 (32-bit x86)"
+arch_option_5 = "5. riscv64 (RISC-V 64-bit)"
+arch_select_prompt = "Please select architecture number (1-5): "
+arch_invalid_choice = "Invalid choice, please try again"
+arch_detected = "Detected architecture"
