--- a/src/i18n/locales/zh.toml
+++ b/src/i18n/locales/zh.toml
@@ -136,3 +136,16 @@ groups_command_failed = "groups 命令执行失败"
 whoami_command_failed = "whoami 命令执行失败"
 failed_execute_whoami = "无法执行 whoami: {}"
 failed_execute_groups = "无法执行 groups: {}"
+
+# Architecture detection
+arch_detection_failed = "架构检测失败"
+unsupported_arch = "不支持的架构"
+arch_detection_prompt = "无法自动检测架构，请手动选择："
+arch_option_1 = "1. aarch64 (ARM64)"
+arch_option_2 = "2. arm (ARM32)"
+arch_option_3 = "3. x86_64 (64-bit x86)"
+arch_option_4 = "4. i686 (32-bit x86)"
+arch_option_5 = "5. riscv64 (RISC-V 64-bit)"
+arch_select_prompt = "请选择架构编号 (1-5): "
+arch_invalid_choice = "无效选择，请重新输入"
+arch_detected = "检测到架构"
