fact: 完成配置文件增强任务 4.1-4.3
- 实现多行格式的 {distro}-init 配置项解析
- 添加安装时执行自定义初始化命令功能
- 更新默认配置文件示例
- 添加中文和英文翻译

--- a/src/i18n/locales/zh.toml
+++ b/src/i18n/locales/zh.toml
@@ -85,6 +85,7 @@ starting_minimal = "开始最小化安装..."
 starting_standard = "开始标准安装..."
 invalid_choice_exclamation = "不合法的选择！"
 install_complete_exclamation = "安装完成！"
+executing_init_commands = "执行自定义初始化命令..."
 
 # Display
 no_systems_here = "[ 这里没有任何系统... ]"
