--- a/src/i18n/locales/zh.toml
+++ b/src/i18n/locales/zh.toml
@@ -78,14 +78,18 @@ distro_selection = "选择 Linux 发行版"
 enter_number_select = "请输入数字以选择:"
 enter_system_name = "请输入系统名称 (留空使用默认):"
 install_mode_selection = "选择安装模式"
-minimal_install = "最小化安装"
+minimal_install = "最小安装"
 standard_install = "标准安装"
 custom_install = "自定义安装"
-starting_minimal = "开始最小化安装..."
+starting_minimal = "开始最小安装..."
 starting_standard = "开始标准安装..."
 invalid_choice_exclamation = "不合法的选择！"
 install_complete_exclamation = "安装完成！"
 executing_init_commands = "执行自定义初始化命令..."
+prompt_start_system = "是否立即启动系统? (y/n): "
+starting_system = "正在启动系统..."
+start_script_not_found = "启动脚本未找到"
+system_path_not_found = "系统路径不存在: {}"
 
 # Display
 no_systems_here = "[ 这里没有任何系统... ]"
