fact: 完成 modernize-termux-installer 提案的剩余任务
- 完成 i18n 国际化保持 (任务 9.1-9.4): 分析并修复未使用 i18n 的文本，更新 en.toml 和 zh.toml，测试中英文界面
- 完成文档更新 (任务 10.1-10.4): 更新 README.md 说明 14 个发行版和 5 种架构支持，添加 {distro}-init 配置示例和架构说明
- 修复 src/utils/cmd.rs 和 src/config/parser.rs 中的硬编码中文文本
- 所有 42 个任务已完成，程序编译测试通过

--- a/src/i18n/locales/en.toml
+++ b/src/i18n/locales/en.toml
@@ -141,6 +141,7 @@ groups_command_failed = "groups command execution failed"
 whoami_command_failed = "whoami command execution failed"
 failed_execute_whoami = "Failed to execute whoami: {}"
 failed_execute_groups = "Failed to execute groups: {}"
+command_execution_failed_detailed = "Command execution failed: {}\nstdout: {}\nstderr: {}"
 
 # Architecture detection
 arch_detection_failed = "Architecture detection failed"
