--- a/src/i18n/locales/zh.toml
+++ b/src/i18n/locales/zh.toml
@@ -141,6 +141,7 @@ groups_command_failed = "groups 命令执行失败"
 whoami_command_failed = "whoami 命令执行失败"
 failed_execute_whoami = "无法执行 whoami: {}"
 failed_execute_groups = "无法执行 groups: {}"
+command_execution_failed_detailed = "命令执行失败: {}\nstdout: {}\nstderr: {}"
 
 # Architecture detection
 arch_detection_failed = "架构检测失败"
